# computer-graphics

./: .clang-format  CMakeLists的配置.md  README.md
chap2-基础知识/assignment/: Bresenham.cpp  CMakeLists.txt  DDA.cpp  liang-b.cpp
chap2-基础知识/assignment/liang-b-others/: f_clip.glsl  f_line.glsl  f_window.glsl  shader.h  v.glsl
chap3-几何建模/assignment/: CMakeLists.txt  bezier.cpp  loop细分.cpp  平面三次多项式.cpp  说明.md
chap4-数字几何处理/assignment/: CMakeLists.txt  simplify.cpp  smooth.cpp  要求.md
chap5-真实感绘制/assignment/: CMakeLists.txt  glad.c  phong光照模型.cpp  phong立方体.cpp  要求.md
chap5-真实感绘制/assignment/纹理映射/: main.cpp
